--- a/Software/tamagotchi_V0.0.0_for_Hardware_V1/.vscode/settings.json
+++ b/Software/tamagotchi_V0.0.0_for_Hardware_V1/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
+    "idf.port": "/dev/ttyUSB0",
     "idf.adapterTargetName": "esp32",
+    "idf.flashType": "UART",
     "idf.openOcdConfigs": [
         "interface/ftdi/esp32_devkitj_v1.cfg",
         "target/esp32.cfg"
-    ],
-    "idf.port": "/dev/ttyUSB0"
+    ]
 }
